tree-sitter-solidity/grammar.js
    source_file: $ => repeat(
      choice(
        $.pragma_directive,
        $.import_directive,
        $.contract_definition,
        $.interface_definition,
        $.library_definition,
        $.struct_definition,
        $.enum_definition,
        $.function_definition,
        $.error_definition,
        $.user_defined_value_type_definition,
      )
    ),

    // Comments
    comment: $ => token(seq('//', /.*/)),
    pragma_directive: $ => seq(
      'pragma',
      field('value', choice($.solidity_version, $.abicoder_version)),
      ';'
    ),

    solidity_version: $ => seq(
      'solidity',
      /[\^>=<~\s]+/,
      $.version_constraint
    ),

    version_constraint: $ => /[0-9]+\.[0-9]+\.[0-9]+/,

    // Import directives
    interface_definition: $ => seq(
      'interface',
      field('name', $.identifier),
      optional(seq(
        'is',
        commaSep1($.inheritance_specifier)
      )),
      '{',
      repeat(choice(
        $.function_definition,
        $.event_definition,
        $.error_definition,
        $.struct_definition,
        $.enum_definition,
        $.user_defined_value_type_definition,
      )),
      '}'
    ),

    // Library definition
    function_definition: $ => seq(
      'function',
      field('name', $.identifier),
      field('parameters', $.parameter_list),
      repeat(choice(
        'external',
        'public',
        'internal',
        'private',
        'pure',
        'view',
        'payable',
        'virtual',
        seq('override', optional($.override_specifier)),
        $.modifier_invocation
      )),
      optional(seq(
        'returns',
        field('return_parameters', $.parameter_list)
      )),
      choice(
        ';',
        field('body', $.function_body)
      )
    ),

    // Constructor definition
    event_definition: $ => seq(
      'event',
      field('name', $.identifier),
      field('parameters', $.event_parameter_list),
      optional('anonymous'),
      ';'
    ),

    event_parameter_list: $ => seq(
      '(',
      optional(commaSep1($.event_parameter)),
      ')'
    ),

    event_parameter: $ => seq(
      field('type', $.type_name),
      optional('indexed'),
      optional(field('name', $.identifier))
    ),

    // Parameter list
    parameter_list: $ => seq(
      '(',
      optional(commaSep1($.parameter)),
      ')'
    ),

    parameter: $ => seq(
      field('type', $.type_name),
      optional(field('storage_location', choice('memory', 'storage', 'calldata'))),
      optional(field('name', $.identifier))
    ),

    // Override specifier
    type_name: $ => choice(
      $.elementary_type_name,
      $.user_defined_type_name,
      $.mapping,
      $.array_type_name,
      $.function_type_name
    ),

    elementary_type_name: $ => choice(
      'address',
      seq('address', 'payable'),
      'bool',
      'string',
      'bytes',
      seq('bytes', /([1-9]|[1-2][0-9]|3[0-2])/),
      'int',
      seq('int', /([1-9]|[1-2][0-9]|3[0-2])8/),
      'uint',
      seq('uint', /([1-9]|[1-2][0-9]|3[0-2])8/),
      'fixed',
      'ufixed'
    ),

    identifier: $ => /[a-zA-Z$_][a-zA-Z0-9$_]*/
  }
});

function commaSep1(rule) {
  return seq(rule, repeat(seq(',', rule)));
}

function commaSep(rule) {
  return optional(commaSep1(rule));
}
